@@ -19,7 +19,8 @@ Changes in HARP-0.5.1:
 - Added support for SHOUTcast/Icecast streams.
 - Fixed bug in ZShuffle causing it to hang on small playlists.
 - Added track listing to songs.
-- Added player and debug logs
+- Added player and debug logs.
+- Added support for shuffling songs, albums, or artists.
 - Added advanced player commands to edit the temporary playlist at runtime.
 
 Changes in HARP-0.5.0:
